--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@ If you would like to chat with me, you can join my <a href="https://discord.gg/8
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
 <ul id="myUL">
-  <li><a href="#">Adele</a></li>
-  <li><a href="#">Agnes</a></li>
-
-  <li><a href="#">Billy</a></li>
-  <li><a href="#">Bob</a></li>
-
-  <li><a href="#">Calvin</a></li>
-  <li><a href="#">Christina</a></li>
-  <li><a href="#">Cindy</a></li>
+  <li><a href="#">Death Swap</a></li>
+  <li><a href="#">Lucky Block</a></li>
+  <li><a href="#">Tesbot</a></li>
 </ul>
 <style>
 #myInput {
