--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <h1 style="text-align: center;">TKDKid1000</h1>
 
-<style>
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+/* Add a black background color to the top navigation */
+.topnav {
   background-color: #333;
+  overflow: hidden;
 }
 
-li {
+/* Style the links inside the navigation bar */
+.topnav a {
   float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
-</style>
 
-<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
