--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
-
+<style>
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
@@ -34,6 +34,7 @@
   background-color: #4CAF50;
   color: white;
 }
+</style>
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
