--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <h1 style="text-align: center;">TKDKid1000</h1>
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="index">Home</a>
+  <a href="projects">Projects</a>
+  <a href="https://discord.gg/87ZF5u9">Discord</a>
+  <a href="contact">Contact</a>
 </div>
 <style>
 /* Add a black background color to the top navigation */
