--- a/projects.html
+++ b/projects.html
@@ -2,10 +2,10 @@
 <h1 style="text-align: center;">TKDKid1000</h1>
 
 <div class="topnav">
-  <a class="active" href="index">Home</a>
-  <a href="projects">Projects</a>
+  <a class="active.html" href="index">Home</a>
+  <a href="projects.html">Projects</a>
   <a href="https://discord.gg/87ZF5u9">Discord</a>
-  <a href="contact">Contact</a>
+  <a href="contact.html">Contact</a>
 </div>
 <style>
 /* Add a black background color to the top navigation */
