--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">TKDKid1000</h1>
+<h1 style="text-align: center;">Home</h1>
 
 <div class="topnav">
   <a class="active.html" href="index">Home</a>
