--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 
-<h1 style="text-align: center;">TKDKid1000</h1>
+<h1 style="text-align: center;">Projects</h1>
 
 <div class="topnav">
   <a class="active.html" href="index">Home</a>
