--- a/index.html
+++ b/index.html
@@ -29,3 +29,7 @@
   color: black;
 }
 </style>
+<h1 style="text-align: center;">TKDKid1000</h1>
+<p>Hello, I am TKDKid1000. A java and python programmer. You can view some of my projects on my
+<a href="https://github.com/tkdkid1000">Github</a>. A few things I have made are a discord bot in python, and a deathswap plugin for Minecraft java.
+If you would like to chat with me, you can join my <a href="https://discord.gg/87ZF5u9" target="_blank" rel="noopener">discord</a>. Here is a few direct links to my projects.</p>
