--- a/contact.html
+++ b/contact.html
@@ -29,3 +29,6 @@
   color: black;
 }
 </style>
+<p>Message me on discord at KWACK#0406
+Join my discord server <a href="https://discord.gg/87ZF5u9">https://discord.gg/87ZF5u9</a>
+Email me at <a href="mailto:tkdkid999@gmail.com">tkdkid999@gmail.com</a></p>
