--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,8 @@
   color: black;
 }
 </style>
-<p>Message me on discord at KWACK#0406
-Join my discord server <a href="https://discord.gg/87ZF5u9">https://discord.gg/87ZF5u9</a>
-Email me at <a href="mailto:tkdkid999@gmail.com">tkdkid999@gmail.com</a></p>
+<p style="text-align: left;">Message me on discord at KWACK#0406</p>
+<hr />
+<p style="text-align: left;">Join my discord server&nbsp;<a href="https://discord.gg/87ZF5u9">https://discord.gg/87ZF5u9</a></p>
+<hr />
+<p style="text-align: left;">Email me directly at <a href="mailto:tkdkid999@gmail.com">tkdkid999@gmail.com</a></p>
