--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1 style="text-align: center;">Home</h1>
+<title>Home - TKDKid1000</title>
 
 <div class="topnav">
   <a class="active.html" href="index">Home</a>
