--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 <h1 style="text-align: center;">Contact</h1>
+<title>Contact - TKDKid1000</title>
 
 <div class="topnav">
   <a class="active.html" href="index">Home</a>
