--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 
 <h1 style="text-align: center;">Projects</h1>
+<title>Projects - TKDKid1000</title>
 
 <div class="topnav">
   <a class="active.html" href="index">Home</a>
@@ -34,9 +35,9 @@
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
 <ul id="myUL">
-  <li><a href="#">Death Swap</a></li>
-  <li><a href="#">Lucky Block</a></li>
-  <li><a href="#">Tesbot</a></li>
+  <li><a href="https://github.com/tkdkid1000/deathswapchallenge">Death Swap</a></li>
+  <li><a href="https://github.com/tkdkid1000/">Lucky Block</a></li>
+  <li><a href="https://github.com/tkdkid1000/tesbot">Tesbot</a></li>
 </ul>
 <style>
 #myInput {
