--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
 
 <ul id="myUL">
   <li><a href="https://github.com/tkdkid1000/deathswapchallenge">Death Swap</a></li>
-  <li><a href="https://github.com/tkdkid1000/">Lucky Block</a></li>
+  <li><a href="https://github.com/tkdkid1000/luckyblock">Lucky Block</a></li>
   <li><a href="https://github.com/tkdkid1000/tesbot">Tesbot</a></li>
 </ul>
 <style>
