--- a/index.html
+++ b/index.html
@@ -33,4 +33,4 @@
 <h1 style="text-align: center;">TKDKid1000</h1>
 <p>Hello, I am TKDKid1000. A java and python programmer. You can view some of my projects on my
 <a href="https://github.com/tkdkid1000">Github</a>. A few things I have made are a discord bot in python, and a deathswap plugin for Minecraft java.
-If you would like to chat with me, you can join my <a href="https://discord.gg/87ZF5u9" target="_blank" rel="noopener">discord.</a></p>
+If you would like to chat with me, you can join my <a href="https://discord.gg/87ZF5u9" target="_blank" rel="noopener">discord.</a> /execute in minecraft:overworld run tp @s 105.70 93.83 319.30 527.38 90.00</p>
