--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 }
 </style>
 <h1 style="text-align: center;">TKDKid1000</h1>
-<p>Hello, I am TKDKid1000. A java and python programmer. You can view some of my projects on my
-<a href="https://github.com/tkdkid1000">Github</a>. A few things I have made are a discord bot in python, and a deathswap plugin for Minecraft java.
-If you would like to chat with me, you can join my <a href="https://discord.gg/87ZF5u9" target="_blank" rel="noopener">discord.</a> /execute in minecraft:overworld run tp @s 105.70 93.83 319.30 527.38 90.00</p>
+<p>Hello! I'm TKDKid1000 and this is my website. I am a programmer and like Minecraft.
+You can join my Minecraft server at <a href="https://www.cyberhub.net">cyberhub.net</a> I am usually active there from 5-8 pm everyday.
+I code plugins for this server. My favorite language is Python, but I also know Java, HTML, and basic JavaScript.
