--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <a href="projects.html">Projects</a>
   <a href="https://discord.gg/87ZF5u9">Discord</a>
   <a href="contact.html">Contact</a>
+  <a href="compiler.html">Compiler</a>
 </div>
 <style>
 /* Add a black background color to the top navigation */
@@ -34,4 +35,3 @@
 <p>Hello! I'm TKDKid1000 and this is my website. I am a programmer and like Minecraft.
 You can join my Minecraft server at <a href="https://www.cyberhub.net">cyberhub.net</a> I am usually active there from 5-8 pm everyday.
 I code plugins for this server. My favorite language is Python, but I also know Java, HTML, and basic JavaScript.</p>
-<iframe src="https://www.jdoodle.com/online-java-compiler/"></iframe>
