--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <a href="projects.html">Projects</a>
   <a href="https://discord.gg/87ZF5u9">Discord</a>
   <a href="contact.html">Contact</a>
+  <a href="compiler.html">Compiler</a>
 </div>
 <style>
 /* Add a black background color to the top navigation */
