--- a/compiler.html
+++ b/compiler.html
@@ -34,4 +34,4 @@
 <h1 style="text-align: center;">TKDKid1000</h1>
 <iframe src="<h1 style="text-align: center;">Home</h1>
 <title>Compiler - TKDKid1000</title>
-<iframe style="width: 500px; height: 500px; overflow: show;" src="https://www.jdoodle.com/online-java-compiler/" width="500" height="500" scrolling="yes">Iframes not supported</iframe>
+<iframe style="width: 1000%; height: 1000%px; overflow: show;" src="https://www.jdoodle.com/online-java-compiler/" width="500" height="500" scrolling="yes">Iframes not supported</iframe>
