--- a/compiler.html
+++ b/compiler.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">Home</h1>
+<h1 style="text-align: center;">Compiler</h1>
 <title>Compiler - TKDKid1000</title>
 
 <div class="topnav">
@@ -32,6 +32,4 @@
 }
 </style>
 <h1 style="text-align: center;">TKDKid1000</h1>
-<iframe src="<h1 style="text-align: center;">Home</h1>
-<title>Compiler - TKDKid1000</title>
-<iframe src="https://www.jdoodle.com/online-java-compiler/"></iframe>
+<iframe style="width: 500px; height: 500px; overflow: show;" src="https://www.jdoodle.com/online-java-compiler/" width="500" height="500" scrolling="yes">Iframes not supported</iframe>
