--- a/compiler.html
+++ b/compiler.html
@@ -30,7 +30,7 @@
   background-color: #ddd;
   color: black;
 }
-</styl>
+</style>
 <h1 style="text-align: center;">TKDKid1000</h1>
 <iframe style="width: 1000px; height: 1000px; overflow: show;" src="https://www.jdoodle.com/online-java-compiler/" width="1000" height="1000" scrolling="yes">Iframes not supported</iframe>
 <iframe style="width: 1000px; height: 1000px; overflow: show;" src="https://www.jdoodle.com/python3-programming-online/" width="1000" height="1000" scrolling="yes">Iframes not supported</iframe>
