--- a/compiler.html
+++ b/compiler.html
@@ -32,6 +32,15 @@
 }
 </style>
 <h1 style="text-align: center;">TKDKid1000</h1>
+<p style="text-align: center;"><strong>Java</strong></p>
+<hr />
+<p style="text-align: center;">&nbsp;</p>
 <iframe style="width: 1000px; height: 1000px; overflow: show;" src="https://www.jdoodle.com/online-java-compiler/" width="1000" height="1000" scrolling="yes">Iframes not supported</iframe>
+<p style="text-align: center;"><strong>Python 3</strong></p>
+<hr />
+<p style="text-align: center;">&nbsp;</p>
 <iframe style="width: 1000px; height: 1000px; overflow: show;" src="https://www.jdoodle.com/python3-programming-online/" width="1000" height="1000" scrolling="yes">Iframes not supported</iframe>
+<p style="text-align: center;"><strong>HTML-CSS-JavaScript</strong></p>
+<hr />
+<p style="text-align: center;">&nbsp;</p>
 <iframe style="width: 1000px; height: 1000px; overflow: show;" src="https://www.jdoodle.com/html-css-javascript-online-editor/" width="1000" height="1000" scrolling="yes">Iframes not supported</iframe>
