--- a/index.html
+++ b/index.html
@@ -35,4 +35,4 @@
 <p>Hello! I'm TKDKid1000 and this is my website. I am a programmer and like Minecraft.
 You can join my Minecraft server at <a href="https://www.cyberhub.net">cyberhub.net</a> I am usually active there from 5-8 pm everyday.
 I code plugins for this server. My favorite language is Python, but I also know Java, HTML, and basic JavaScript.</p>
-<iframe src="http://irc.spi.gt/iris/?nick=&channels=minecraft" width="647" height="400"></iframe>
+<iframe src="http://irc.spi.gt/iris/?nick=&channels=minecraft" width="647" height="400" scrolling="yes"></iframe>
