--- a/compiler.html
+++ b/compiler.html
@@ -7,6 +7,7 @@
   <a href="https://discord.gg/87ZF5u9">Discord</a>
   <a href="contact.html">Contact</a>
   <a href="compiler.html">Compiler</a>
+  <a href="webchat.html">Webchat</a>
 </div>
 <style>
 /* Add a black background color to the top navigation */
