--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <a href="https://discord.gg/87ZF5u9">Discord</a>
   <a href="contact.html">Contact</a>
   <a href="compiler.html">Compiler</a>
+  <a href="webchat.html">Webchat</a>
 </div>
 <style>
 /* Add a black background color to the top navigation */
@@ -33,6 +34,8 @@
 </style>
 <p style="text-align: left;">Message me on discord at KWACK#0406</p>
 <hr />
-<p style="text-align: left;">Join my discord server&nbsp;<a href="https://discord.gg/87ZF5u9">https://discord.gg/87ZF5u9</a></p>
+<p style="text-align: left;">Join my discord server <a href="https://discord.gg/87ZF5u9">https://discord.gg/87ZF5u9</a></p>
 <hr />
 <p style="text-align: left;">Email me directly at <a href="mailto:tkdkid999@gmail.com">tkdkid999@gmail.com</a></p>
+<hr />
+<p style="text-align: left;">Upvote my reddit <a href="https://reddit.com/u/TKDKid1000">U/TKDKid1000</a></p>
