--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
   <a href="https://discord.gg/87ZF5u9">Discord</a>
   <a href="contact.html">Contact</a>
   <a href="compiler.html">Compiler</a>
+  <a href="webchat.html">Webchat</a>
 </div>
 <style>
 /* Add a black background color to the top navigation */
