--- a/webchat.html
+++ b/webchat.html
@@ -32,4 +32,4 @@
   color: black;
 }
 </style>
-<iframe src="https://webchat.freenode.net/#tkdkid1000" width=500 height=400></iframe>
+<iframe style="width: 1000px; height: 1000px; overflow: show;" src="https://webchat.freenode.net/#tkdkid1000" width="1000" height="1000" scrolling="yes">Iframes not supported</iframe>
