--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<html prefix="og: https://ogp.me/ns#">
+<head>
+<title>The Rock (1996)</title>
+<meta property="og:title" content="The Rock" />
+<meta property="og:type" content="video.movie" />
+<meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+<meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+...
+</head>
 <h1 style="text-align: center;">Home</h1>
 <title>Home - TKDKid1000</title>
 
@@ -36,3 +45,5 @@
 <p>Hello! I'm TKDKid1000 and this is my website. I am a programmer and like Minecraft.
 You can join my Minecraft server at <a href="https://www.cyberhub.net">cyberhub.net</a> I am usually active there from 5-8 pm everyday.
 I code plugins for this server. My favorite language is Python, but I also know Java, HTML, and basic JavaScript.</p>
+
+</html>
