--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html prefix="og: https://ogp.me/ns#">
 <head>
-<title>The Rock (1996)</title>
-<meta property="og:title" content="The Rock" />
+<meta property="og:title" content="TKDKid1000" />
 <meta property="og:type" content="video.movie" />
-<meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-<meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+<meta property="og:url" content="https://tkdkid1000.github.io/" />
+<meta property="og:image" content="https://avatars2.githubusercontent.com/u/69736165?s=400&u=3a4dd421970f72694045bdcdadb7ae220b533293&v=4" />
 ...
 </head>
 <h1 style="text-align: center;">Home</h1>
