Updated the repositories

--- a/projects.html
+++ b/projects.html
@@ -37,9 +37,14 @@
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
 <ul id="myUL">
-  <li><a href="https://github.com/tkdkid1000/deathswapchallenge">Death Swap</a></li>
-  <li><a href="https://github.com/tkdkid1000/luckyblock">Lucky Block</a></li>
-  <li><a href="https://github.com/tkdkid1000/tesbot">Tesbot</a></li>
+  <li><a href="https://github.com/tkdkid1000/CyberhubMC">CyberhubMC</a></li>
+  <li><a href="https://github.com/tkdkid1000/rpg-bot">Rpg Bot</a></li>
+  <li><a href="https://github.com/tkdkid1000/armorswap">Armor Swapping</a></li>
+  <li><a href="https://github.com/tkdkid1000/tes">The Epic Server</a></li>
+  <li><a href="https://github.com/tkdkid1000/leveling-bot">Level Bot</a></li>
+  <li><a href="https://github.com/tkdkid1000/MCGO">MCGO</a></li>
+  <li><a href="https://github.com/tkdkid1000/internet-test">Internet Test</a></li>
+  <li><a href="https://github.com/tkdkid1000/flask-smarthome">Flask Smarthome</a></li>
 </ul>
 <style>
 #myInput {
