--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
 <meta property="og:type" content="video.movie" />
 <meta property="og:url" content="https://tkdkid1000.github.io/" />
 <meta property="og:image" content="https://avatars2.githubusercontent.com/u/69736165?s=400&u=3a4dd421970f72694045bdcdadb7ae220b533293&v=4" />
-...
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
 </head>
 <h1 style="text-align: center;">Home</h1>
 <title>Home - TKDKid1000</title>
 
-<div class="topnav">
-  <a class="active.html" href="index">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="https://discord.gg/87ZF5u9">Discord</a>
-  <a href="contact.html">Contact</a>
-  <a href="compiler.html">Compiler</a>
-  <a href="webchat.html">Webchat</a>
-</div>
+<div data-include="navbar"></div>
+
 <style>
 /* Add a black background color to the top navigation */
 .topnav {
