--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<html prefix="og: https://ogp.me/ns#">
+<html>
 <head>
-<meta property="og:title" content="TKDKid1000" />
-<meta property="og:type" content="video.movie" />
-<meta property="og:url" content="https://tkdkid1000.github.io/" />
-<meta property="og:image" content="https://avatars2.githubusercontent.com/u/69736165?s=400&u=3a4dd421970f72694045bdcdadb7ae220b533293&v=4" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="script.js"></script>
 <link rel="stylesheet" href="style.css">
+<div data-include="ogp"></div>
 </head>
+<body>
 <h1 style="text-align: center;">Home</h1>
 <title>Home - TKDKid1000</title>
 
@@ -40,5 +38,5 @@
 <p>Hello! I'm TKDKid1000 and this is my website. I am a programmer and like Minecraft.
 You can join my Minecraft server at <a href="https://www.cyberhub.net">cyberhub.net</a> I am usually active there from 5-8 pm everyday.
 I code plugins for this server. My favorite language is Python, but I also know Java, HTML, and basic JavaScript.</p>
-
+</body>
 </html>
