--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,15 @@
-<h1 style="text-align: center;">Contact</h1>
-<title>Contact - TKDKid1000</title>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
+<div data-include="ogp"></div>
+</head>
+<body>
+<h1 style="text-align: center;">Home</h1>
+<title>Home - TKDKid1000</title>
 
-<div class="topnav">
-  <a class="active.html" href="index">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="https://discord.gg/87ZF5u9">Discord</a>
-  <a href="contact.html">Contact</a>
-  <a href="compiler.html">Compiler</a>
-  <a href="webchat.html">Webchat</a>
-</div>
+<div data-include="navbar"></div>
+
 <style>
 /* Add a black background color to the top navigation */
 .topnav {
@@ -32,10 +33,15 @@
   color: black;
 }
 </style>
-<p style="text-align: left;">Message me on discord at KWACK#0406</p>
+<h1 style="text-align: center;">TKDKid1000</h1>
+
+<p style="text-align: left;">Message me on discord at imayhaveborkedit#0406</p>
 <hr />
-<p style="text-align: left;">Join my discord server <a href="https://discord.gg/87ZF5u9">https://discord.gg/87ZF5u9</a></p>
+<p style="text-align: left;">Join my discord server <a href="https://discord.gg/eMHbUptg77"> https://discord.gg/eMHbUptg77</a></p>
 <hr />
 <p style="text-align: left;">Email me directly at <a href="mailto:tkdkid999@gmail.com">tkdkid999@gmail.com</a></p>
 <hr />
-<p style="text-align: left;">Upvote my reddit <a href="https://reddit.com/u/TKDKid1000">U/TKDKid1000</a></p>
+<p style="text-align: left;">Follow my reddit <a href="https://reddit.com/u/TKDKid1000">U/TKDKid1000</a></p>
+
+</body>
+</html>
