--- a/projects.html
+++ b/projects.html
@@ -1,15 +1,17 @@
 
-<h1 style="text-align: center;">Projects</h1>
-<title>Projects - TKDKid1000</title>
+<html>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
+<div data-include="ogp"></div>
+</head>
+<body>
+<h1 style="text-align: center;">Home</h1>
+<title>Home - TKDKid1000</title>
 
-<div class="topnav">
-  <a class="active.html" href="index">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="https://discord.gg/87ZF5u9">Discord</a>
-  <a href="contact.html">Contact</a>
-  <a href="compiler.html">Compiler</a>
-  <a href="webchat.html">Webchat</a>
-</div>
+<div data-include="navbar"></div>
+
 <style>
 /* Add a black background color to the top navigation */
 .topnav {
@@ -101,3 +103,6 @@ function myFunction() {
   }
 }
 </script>
+
+</body>
+</html>
