--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
 <div data-include="ogp"></div>
 </head>
 <body>
-<h1 style="text-align: center;">Home</h1>
-<title>Home - TKDKid1000</title>
+<h1 style="text-align: center;">Contact</h1>
+<title>Contact - TKDKid1000</title>
 
 <div data-include="navbar"></div>
 
