--- a/projects.html
+++ b/projects.html
@@ -7,14 +7,14 @@
 <div data-include="ogp"></div>
 </head>
 <body>
-<h1 style="text-align: center;">Home</h1>
-<title>Home - TKDKid1000</title>
+<h1 style="text-align: center;">Projects</h1>
+<title>Projects - TKDKid1000</title>
 
 <div data-include="navbar"></div>
 
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+<input type="text" id="reposearch" onkeyup="search()" placeholder="Search for repositories">
 
-<ul id="myUL">
+<ul id="repositories">
   <li><a href="https://github.com/tkdkid1000/CyberhubMC">CyberhubMC</a></li>
   <li><a href="https://github.com/tkdkid1000/rpg-bot">Rpg Bot</a></li>
   <li><a href="https://github.com/tkdkid1000/armorswap">Armor Swapping</a></li>
@@ -25,7 +25,7 @@
   <li><a href="https://github.com/tkdkid1000/flask-smarthome">Flask Smarthome</a></li>
 </ul>
 <style>
-#myInput {
+#reposearch {
   background-image: url('/css/searchicon.png'); /* Add a search icon to input */
   background-position: 10px 12px; /* Position the search icon */
   background-repeat: no-repeat; /* Do not repeat the icon image */
@@ -36,38 +36,35 @@
   margin-bottom: 12px; /* Add some space below the input */
 }
 
-#myUL {
-  /* Remove default list styling */
+#repositories {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-#myUL li a {
-  border: 1px solid #ddd; /* Add a border to all links */
-  margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6; /* Grey background color */
-  padding: 12px; /* Add some padding */
-  text-decoration: none; /* Remove default text underline */
-  font-size: 18px; /* Increase the font-size */
-  color: black; /* Add a black text color */
-  display: block; /* Make it into a block element to fill the whole list */
+#repositories li a {
+  border: 1px solid #ddd;
+  margin-top: -1px
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black
+  display: block
 }
 
-#myUL li a:hover:not(.header) {
-  background-color: #eee; /* Add a hover effect to all links, except for headers */
+#repositories li a:hover:not(.header) {
+  background-color: #eee;
 }
 </style>
 <script>
-function myFunction() {
-  // Declare variables
+function search() {
   var input, filter, ul, li, a, i, txtValue;
-  input = document.getElementById('myInput');
+  input = document.getElementById('reposearch');
   filter = input.value.toUpperCase();
-  ul = document.getElementById("myUL");
+  ul = document.getElementById("repositories");
   li = ul.getElementsByTagName('li');
 
-  // Loop through all list items, and hide those who don't match the search query
   for (i = 0; i < li.length; i++) {
     a = li[i].getElementsByTagName("a")[0];
     txtValue = a.textContent || a.innerText;
