Added base table

--- a/projects.html
+++ b/projects.html
@@ -11,9 +11,16 @@
 <h1 style="text-align: center;">Projects</h1>
 <title>Projects - TKDKid1000</title>
 
-
 <div data-include="navbar"></div>
 
+<table>
+<tr>
+<th>Name</th>
+<th>URL</th>
+<th>Description</th>
+<th>Language</th>
+</tr>
+</table>
 </body>
 </html>
  
