Changed bio to current bio

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div data-include="navbar"></div>
 
 <h1 style="text-align: center;">TKDKid1000</h1>
-<p>Hello! I'm TKDKid1000 and this is my website. I am a programmer and like Minecraft.
-You can join my Minecraft server at <a href="https://www.cyberhub.net">cyberhub.net</a> I am usually active there from 5-8 pm everyday.
-I code plugins for this server. My favorite language is Python, but I also know Java, HTML, and basic JavaScript.</p>
+<p>
+Hi! I’m TKDKid1000. I’m a minecraft developer. I code in java, and have contributed to large projects like Essentialsx.
+</p>
 </body>
 </html>
