Use zero-md to make bio GitHub bio

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
 <script src="script.js"></script>
 <link rel="stylesheet" href="style.css">
 <div data-include="ogp"></div>
@@ -12,8 +13,8 @@
 <div data-include="navbar"></div>
 
 <h1 style="text-align: center;">TKDKid1000</h1>
-<p>
-Hi! I’m TKDKid1000. I’m a minecraft developer. I code in java, and have contributed to large projects like Essentialsx.
-</p>
+
+<zero-md src="https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/README.md"></zero-md>
+
 </body>
 </html>
