--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
 <script src="script.js"></script>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/png" href="https://github.com/TKDKid1000/tkdkid1000.github.io/blob/master/head.png?raw=true"/>
 <div data-include="ogp"></div>
 </head>
 <body>
