--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="script.js"></script>
+<link rel="icon" type="image/png" href="https://github.com/TKDKid1000/tkdkid1000.github.io/blob/master/head.png?raw=true"/>
 <link rel="stylesheet" href="style.css">
 <div data-include="ogp"></div>
 </head>
