--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="script.js"></script>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/png" href="https://github.com/TKDKid1000/tkdkid1000.github.io/blob/master/head.png?raw=true"/>
 <div data-include="ogp"></div>
 </head>
 <body>
