Changed zero-md css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 <h1 style="text-align: center;">TKDKid1000</h1>
 
-<zero-md src="https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/README.md"></zero-md>
+<zero-md src="https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/README.md">
+    <template>
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/zeromd.css">
+    </template>
+</zero-md>
 
 </body>
 </html>
