--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script>
     let xhr = new XMLHttpRequest();
-            xhr.open('GET', "https://raw.githubusercontent.com/TKDKid1000/tkdkid1000.github.io/master/README.md", true);
+            xhr.open('GET', "https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/README.md", true);
             xhr.send();
 
             xhr.onreadystatechange = processRequest;
