Updated table code

--- a/projects.html
+++ b/projects.html
@@ -15,10 +15,10 @@
 
 <table id="repos">
 <tr>
-<th>Name</th>
-<th>URL</th>
-<th>Description</th>
-<th>Language</th>
+<th><h6>Name</h6></th>
+<th><h6>URL</h6></th>
+<th><h6>Description</h6></th>
+<th><h6>Language</h6></th>
 </tr>
 </table>
 <script src="projects.js"></script>
