added projects page

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TKDKid1000 - Contact</title>
+        <title>TKDKid1000 - Home</title>
         <link rel="stylesheet" href="/style.css">
         <link rel="icon" type="image/png" href="/head.png">
         <script src="/script.js"></script>
@@ -25,22 +25,22 @@
             </a>
         </div>
 
-	<h1 style="text-align: center;">Contact</h1>
-	<i class="fab fa-discord fa-7x"></i>
-	<p style="text-align: left;">Message me on discord at imayhaveborkedit#0406</p>
-	<hr />
-	<i class="fas fa-server fa-7x"></i>
-	<p style="text-align: left;">Join my discord server <a href="https://discord.gg/eMHbUptg77"> https://discord.gg/eMHbUptg77</a></p>
-	<hr />
-	<i class="fas fa-envelope fa-7x"></i>
-	<p style="text-align: left;">Email me directly at <a href="mailto:tkdkid999@gmail.com">tkdkid999@gmail.com</a></p>
-	<hr />
-	<i class="fab fa-reddit fa-7x"></i>
-	<p style="text-align: left;">Follow my reddit <a href="https://reddit.com/u/TKDKid1000">U/TKDKid1000</a></p>
+
+        <h1 style="text-align: center;">Home</h1>
+	<table id="repos">
+	<tr>
+	<th><h3>Name</h3></th>
+	<th><h3>URL</h3></th>
+	<th><h3>Description</h3></th>
+	<th><h3>Language</h3></th>
+	</tr>
+	</table>
+	<script src="projects.js"></script>
         <hr />
         <i class="fab fa-discord fa-lg" title="Copy my discord name" onclick="copytext(`imayhaveborkedit#0406`)"></i>
         <i class="fab fa-github fa-lg" title="Open my github" onclick="openlink(`https://github.com/TKDKid1000`)"></i>
         <i class="fab fa-reddit fa-lg" title="Open my reddit" onclick="openlink(`https://reddit.com/u/TKDKid1000`)"></i>
+        <textarea style="display:none" id=text></textarea>
         <span style="color:#ff0000;">&copy; </span><span style="color:#f4000a;">C</span><span style="color:#e90015;">o</span><span style="color:#df001f;">p</span><span style="color:#d4002a;">y</span><span style="color:#c90034;">r</span><span style="color:#bf003f;">i</span><span style="color:#b40049;">g</span><span style="color:#aa0054;">h</span><span style="color:#9f005e;">t </span><span style="color:#940069;">2</span><span style="color:#8a0073;">0</span><span style="color:#7f007e;">2</span><span style="color:#740088;">1</span><span style="color:#6a0093;">, </span><span style="color:#5f009d;">T</span><span style="color:#5500a8;">K</span><span style="color:#4a00b2;">D</span><span style="color:#3f00bd;">K</span><span style="color:#3500c7;">i</span><span style="color:#2a00d2;">d</span><span style="color:#1f00dc;">1</span><span style="color:#1500e7;">0</span><span style="color:#0a00f1;">0</span><span style="color:#0000fc;">0</span>
     </body>
 </html>
