--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	        <a href="/contact.html">Contact</a>
             <a href="https://github.com/TKDKid1000">Git</a>
             <a href="https://discord.gg/dvKTpCKBFC">Discord</a>
+	    <a href="/projects.html">Projects</a>
             <i class="fab fa-discord fa-3x" title="Copy my discord name" onclick="copytext(`imayhaveborkedit#0406`)"></i>
             <i class="fab fa-github fa-3x" title="Open my github" onclick="openlink(`https://github.com/TKDKid1000`)"></i>
             <i class="fab fa-reddit fa-3x" title="Open my reddit" onclick="openlink(`https://reddit.com/u/TKDKid1000`)"></i>
