--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TKDKid1000 - Home</title>
+        <title>TKDKid1000 - Projects</title>
         <link rel="stylesheet" href="/style.css">
         <link rel="icon" type="image/png" href="/head.png">
         <script src="/script.js"></script>
@@ -26,7 +26,7 @@
         </div>
 
 
-        <h1 style="text-align: center;">Home</h1>
+        <h1 style="text-align: center;">Projects</h1>
 	<table id="repos">
 	<tr>
 	<th><h3>Name</h3></th>
