added edit button to readme

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
               <i class="fa fa-bars"></i>
             </a>
         </div>
-
-
         <h1 style="text-align: center;">Home</h1>
+        <a style="text-align: right;" href="https://github.com/TKDKid1000/TKDKid1000/edit/main/README.md"><i class="fa fa-pencil-square-o fa-2"></i></a>
         <div id="readme"></div>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script>
