--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             </a>
         </div>
         <h1 style="text-align: center;">Home</h1>
-        <a style="text-align: right;" href="https://github.com/TKDKid1000/TKDKid1000/edit/main/README.md"><i class="fa fa-pencil-square-o fa-2"></i></a>
+        <p class="edit">
+            <a title="View it raw" href="https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/README.md"><i class="fa fa-file-text-o fa-2"></i></a>
+            <a title="Edit this text" href="https://github.com/TKDKid1000/TKDKid1000/edit/main/README.md"><i class="fa fa-pencil-square-o fa-2"></i></a>
+        </p>
         <div id="readme"></div>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script>
