--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
             </a>
         </div>
         <h1 style="text-align: center;">Home</h1>
-        <p class="edit">
-            <a title="View it raw" href="https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/README.md"><i class="fa fa-file-text-o fa-2"></i></a>
-            <a title="Edit this text" href="https://github.com/TKDKid1000/TKDKid1000/edit/main/README.md"><i class="fa fa-pencil-square-o fa-2"></i></a>
-        </p>
+        <div class="edit">
+            <p>
+                <a title="View it raw" href="https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/README.md"><i class="fa fa-file-text-o fa-2"></i></a>
+                <a title="Edit this text" href="https://github.com/TKDKid1000/TKDKid1000/edit/main/README.md"><i class="fa fa-pencil-square-o fa-2"></i></a>
+            </p>
+        </div>
         <div id="readme"></div>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script>
