--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <h1 style="text-align: center;">Home</h1>
         <div class="edit">
             <p>
+                View Raw
                 <a title="View it raw" href="https://raw.githubusercontent.com/TKDKid1000/TKDKid1000/main/README.md"><i class="fa fa-file-text-o fa-2"></i></a>
+                Edit text
                 <a title="Edit this text" href="https://github.com/TKDKid1000/TKDKid1000/edit/main/README.md"><i class="fa fa-pencil-square-o fa-2"></i></a>
             </p>
         </div>
