used github api to auto gen projects page

--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,7 @@
 	<th><h3>URL</h3></th>
 	<th><h3>Description</h3></th>
 	<th><h3>Language</h3></th>
+	<th><h3>License</h3></th>
 	</tr>
 	</table>
 	<script src="projects.js"></script>
