--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
             <a href="https://github.com/TKDKid1000">Git</a>
             <a href="https://discord.gg/dvKTpCKBFC">Discord</a>
 	    <a href="/projects.html">Projects</a>
+        <a href="/blog.html">Blog</a>
             <i class="fab fa-discord fa-3x" title="Copy my discord name" onclick="copytext(`imayhaveborkedit#0406`)"></i>
             <i class="fab fa-github fa-3x" title="Open my github" onclick="openlink(`https://github.com/TKDKid1000`)"></i>
             <i class="fab fa-reddit fa-3x" title="Open my reddit" onclick="openlink(`https://reddit.com/u/TKDKid1000`)"></i>
