--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="https://github.com/TKDKid1000">Git</a>
             <a href="https://discord.gg/dvKTpCKBFC">Discord</a>
 	    <a href="/projects.html">Projects</a>
+        <a href="/blog.html">Blog</a>
             <i class="fab fa-discord fa-3x" title="Copy my discord name" onclick="copytext(`imayhaveborkedit#0406`)"></i>
             <i class="fab fa-github fa-3x" title="Open my github" onclick="openlink(`https://github.com/TKDKid1000`)"></i>
             <i class="fab fa-reddit fa-3x" title="Open my reddit" onclick="openlink(`https://reddit.com/u/TKDKid1000`)"></i>
@@ -47,6 +48,18 @@
                                 marked(xhr.responseText);
                         }
                     }
+        </script>
+        <h2>Recent Blog Post</h2>
+        <div id="post1" class="blogpost">
+	    	<h2 id="posttitle"></h2>
+            <a id="permalink" href="">Post Link</a>
+	    	<div id="postcontent"></div>
+	    	<br />
+	    	<p id="datetime"></p>
+	    </div>
+        <script src="blog.js"></script>
+        <script>
+            loadblog("post1", 0);
         </script>
         <hr />
         <i class="fab fa-discord fa-lg" title="Copy my discord name" onclick="copytext(`imayhaveborkedit#0406`)"></i>
