Added make a new post button

--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,12 @@
 
 
         <h1 style="text-align: center;">Blog</h1>
+        <div class="edit">
+            <p>
+                Make a new post!
+                <a title="Make a new post" href="https://github.com/TKDKid1000/TKDKid1000/edit/main/README.md"><i class="fa fa-pencil-square-o fa-2"></i></a>
+            </p>
+        </div>
 	    <div id="post1" class="blogpost">
 	    	<h2 id="posttitle"></h2>
             <a id="permalink" href="">Post Link</a>
